Move away of deprecated Class.newInstance method.
Add save action to o.e.l.tools.launch.core to have some basic code
cleanup automated in the future too.

Change-Id: Iaaf0f057fc4fa190a7b5e63461f625eb927d768a
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>
Reviewed-on: https://git.eclipse.org/r/116329
Tested-by: Hudson CI